Allow to pass 'env' variables to php pool

--- a/manala.php/templates/fpm_pools/7.1/_base.j2
+++ b/manala.php/templates/fpm_pools/7.1/_base.j2
@@ -385,11 +385,7 @@
 ; Pass environment variables like LD_LIBRARY_PATH. All $VARIABLEs are taken from
 ; the current environment.
 ; Default Value: clean env
-{{ macros.config_row(config, 'env[HOSTNAME]', ';env[HOSTNAME] = $HOSTNAME', true) }}
-{{ macros.config_row(config, 'env[PATH]', ';env[PATH] = /usr/local/bin:/usr/bin:/bin', true) }}
-{{ macros.config_row(config, 'env[TMP]', ';env[TMP] = /tmp', true) }}
-{{ macros.config_row(config, 'env[TMPDIR]', ';env[TMPDIR] = /tmp', true) }}
-{{ macros.config_row(config, 'env[TEMP]', ';env[TEMP] = /tmp', true) }}
+{{ macros.config_env(config) }}
 
 ; Additional php.ini defines, specific to this pool of workers. These settings
 ; overwrite the values previously defined in the php.ini. The directives are the
@@ -455,11 +451,7 @@
   'catch_workers_output',
   'clear_env',
   'security.limit_extensions',
-  'env[HOSTNAME]',
-  'env[PATH]',
-  'env[TMP]',
-  'env[TMPDIR]',
-  'env[TEMP]',
+  'env',
   'php_admin_value[sendmail_path]',
   'php_flag[display_errors]',
   'php_admin_value[error_log]',
